package controller

import (
	"adaptodb/pkg/schema"
	"log"
)

type MigrationTask struct {
	fromShardInfo schema.RaftGroup
	toShardInfo   schema.RaftGroup
	ranges        []schema.KeyRange
}

type Operator struct {
}

func NewOperator() *Operator {
	return &Operator{}
}

func (op *Operator) migrate(fromShard schema.RaftGroup, toShard schema.RaftGroup, keyranges []schema.KeyRange) error {
	// Implement data migration logic here
	log.Println("Migrating data from shard", fromShard.ShardID, "to shard", toShard.ShardID)
	// fromIdx, toIdx := uint64(rand.Intn(len(fromShard.Members))), uint64(rand.Intn(len(toShard.Members)))
	// fromNode, toNode := fromShard.Members[fromIdx], toShard.Members[toIdx]

	// // Connect to source and destination nodes via gRPC
	// fromAddr := fromNode.Address
	// fromConn, err := grpc.NewClient(
	// 	fmt.Sprintf("localhost:%d", 51000+fromNode.ID),
	// 	grpc.WithTransportCredentials(insecure.NewCredentials()),
	// )
	// if err != nil {
	// 	return fmt.Errorf("failed to connect to source node: %v", err)
	// }
	// defer fromConn.Close()
	// fromClient := pb.NewNodeRouterClient(fromConn)

	// toAddr := toNode.Address
	// toConn, err := grpc.NewClient(
	// 	fmt.Sprintf("localhost:%d", 51000+toNode.ID),
	// 	grpc.WithTransportCredentials(insecure.NewCredentials()),
	// )
	// if err != nil {
	// 	return fmt.Errorf("failed to connect to destination node: %v", err)
	// }
	// defer toConn.Close()
	// toClient := pb.NewNodeRouterClient(toConn)

	// // For each key range to migrate:
	// for _, kr := range keyranges {
	// 	log.Printf("Migrating range %v-%v from shard %d to shard %d",
	// 		kr.Start, kr.End, fromShard.ShardID, toShard.ShardID)

	// 	// 1. Read all keys in range from source
	// 	readReq := &pb.ReadRequest{
	// 		ClusterID: fromShard.ShardID,
	// 		Key:       kr.Start, // Need to implement range reads
	// 	}
	// 	readResp, err := fromClient.Read(context.Background(), readReq)
	// 	if err != nil {
	// 		return fmt.Errorf("failed to read from source: %v", err)
	// 	}

	// 2. Write to destination
	// writeReq := &pb.WriteRequest{
	// 	ClusterID: toShard.ShardID,
	// 	Key:       readResp.Key,
	// 	Value:     readResp.Value,
	// }
	// _, err = toClient.Write(context.Background(), writeReq)
	// if err != nil {
	// 	return fmt.Errorf("failed to write to destination: %v", err)
	// }
	// }

	return nil
}
